--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.1.78",
@@ -45,5 +46,6 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pages": "^0.32.1",
     "vite-react-ssg": "^0.6.2"
-  }
+  },
+  "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
