--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fisand-home-seed",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite-react-ssg dev",
@@ -19,33 +19,31 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@eslint-react/eslint-plugin": "^1.5.28",
     "@iconify-json/material-symbols": "^1.1.78",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
+    "@sxzz/eslint-config": "^3.14.0",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint": "^9.2.0",
+    "eslint-plugin-import-x": "^0.5.2",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "5.1.0-rc-df5f2736-20240712",
     "eslint-plugin-simple-import-sort": "^12.1.0",
     "rollup": "4.15.0",
     "typescript": "^5.2.2",
     "unocss": "^0.59.4",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
-    "vite": "^5.2.0",
+    "vite": "^5.3.4",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pages": "^0.32.1",
-    "vite-react-ssg": "^0.6.2"
-  },
-  "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
+    "vite-react-ssg": "^0.6.3"
+  }
 }
