--- a/package.json
+++ b/package.json
@@ -19,30 +19,24 @@
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^1.5.28",
     "@iconify-json/material-symbols": "^1.1.78",
+    "@nabla/vite-plugin-eslint": "^2.0.4",
     "@svgr/core": "^8.1.0",
     "@svgr/plugin-jsx": "^8.1.0",
-    "@sxzz/eslint-config": "^3.14.0",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@typescript-eslint/eslint-plugin": "^7.2.0",
-    "@typescript-eslint/parser": "^7.2.0",
+    "@unocss/eslint-config": "^0.61.9",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^9.2.0",
-    "eslint-plugin-import-x": "^0.5.2",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "5.1.0-rc-df5f2736-20240712",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
+    "eslint-config-hyoban": "^3.0.1",
     "rollup": "4.15.0",
     "typescript": "^5.2.2",
     "unocss": "^0.59.4",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
-    "vite": "^5.3.4",
+    "vite": "^5.4.0",
     "vite-plugin-checker": "^0.6.4",
-    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-pages": "^0.32.1",
     "vite-react-ssg": "^0.6.3"
   }
